--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
         </header>
         <!-- END HEADER-->
 
+
         <!-- MAIN -->
         <main>
 
@@ -155,6 +156,43 @@
 
         </main>
         <!-- END MAIN -->
+
+
+        <!-- FOOTER-->
+        <footer>
+
+            <div class="container">
+
+                <nav class="nav-footer">
+
+                    <div class="nav-footer-left">
+                        <h4>Boolando s.r.l</h4>
+                        <div class="info-footer">
+                            <small>Informazioni legali</small>
+                            <small>Informativa sulla privacy</small>
+                            <small>Diritto di recesso</small>
+                        </div>
+                    </div>
+
+                    <div class="nav-footer-right">
+                        <h4>Trovaci anche su</h4>
+                        <div class="info-footer">
+                            <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                            <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                            <a href="#"><i class="fa-brands fa-square-instagram"></i></a>
+                            <a href="#"><i class="fa-brands fa-square-youtube"></i></a>
+                        </div>
+                    </div>
+
+                </nav>
+
+            </div>
+
+        </footer>
+        <!-- END FOOTER -->
+
+
+
         
     </body>
 
